Travail en cours de déplacement des règles Makefile dans les fichiers concernés
Les règles qui auparavant se trouvaient dans les fichiers Makefile.org sont déplacées dans les fichiers .org qu'elles concernent.
Ces grosses modifications n'ont pas été testées. Les tests vont consister à :
    - Créer les fichiers Makefile à partir des Makefiles originaux présents dans le commit
    - Pour chacun des targets intéressants (End results et test) :
      - Activer le target
      - S'assurer que tout se déroule sans erreurs et que le résultat escompté est produit
      - S'assurer que make clean nettoie tout derrière lui

Les quelques prochains commits devraient refléter mes efforts pour que ces tests réussissent.

--- a/ChainWalk/ChainWalk_generator.org
+++ b/ChainWalk/ChainWalk_generator.org
@@ -1,4 +1,5 @@
 #+TITLE: Trajectory generator in a 4 states chainwalk
+* C Implementation
 
 This program generates a random walk in a 4 states chain. See \cite{lagoudakis2003least} for a longer explanation of this toy problem. The transitions are output on the standard output. They have the following format $s~a~s'~r~eoe$ where : 
  - s and s' are int in [1:4], 1 being the rightmost state and 4 the leftmost
@@ -58,4 +59,37 @@ int main(int argc, char* argv[]){
   return 0;
 }
 #+end_src
+
+
+* Makefile rules
+  Some rules to tangle the source files :
+  #+srcname: Generator_code_make
+  #+begin_src makefile
+Chainwalk_generator.c: Chainwalk_generator.org 
+	$(call tangle,"Chainwalk_generator.org")
+  #+end_src
+
+   A rule to create the object file :
+  #+srcname: Generator_c2o_make
+  #+begin_src makefile
+Chainwalk_generator.o: Chainwalk_generator.c ../utils.h 
+	$(call c2obj,"Chainwalk_generator.c")
+  #+end_src
+
+   A rule to create the executable from the object file :
+#+srcname: Generator_o2exe_make
+#+begin_src makefile
+Chainwalk_generator.exe: Chainwalk_generator.o ../utils.o
+	$(O2EXE) -o Chainwalk_generator.exe Chainwalk_generator.o ../utils.o
+#+end_src
+
+
+   A rule to clean the mess :
+  #+srcname: Generator_clean_make
+  #+begin_src makefile
+Generator_clean:
+	find . -maxdepth 1 -iname "Chainwalk_generator.exe"   | xargs -t rm
+	find . -maxdepth 1 -iname "Chainwalk_generator.c"   | xargs -t rm 
+	find . -maxdepth 1 -iname "Chainwalk_generator.o"   | xargs -t rm
+  #+end_src
 
